# xas_normalisation

./: .gitignore  README.md  columnExtractionFunctions.cpp  columnExtraction_2thetaCorrection.py  columnExtraction_thetaCorrection.cpp  columnExtraction_thetaCorrection.py  larchTest.ipynb  larch_xrayDatabase.py  linComb.py  pyproject.toml  renameFiles.py  xasColumnsNormBkg.py  xasNormalisation.py
xasCorn/: columnExtraction_thetaCorrection.py  edgeList.txt  h5Processor.py  xasColumnsNormBkg.py  xasNormalisation.py
